# tactile-gym-3-keju

./: .gitignore  README.md  pyproject.toml
.github/workflows/: script-tests.yml
tg3/data/: launch_collect.py  setup_collect.py
tg3/data/collect/: collect.py  setup_embodiment.py  setup_targets.py  simple_sensors.py
tg3/data/process/: process_images.py  process_markers.py  transform_image.py
tg3/learning/reinforcement/: launch_eval_agent.py  launch_train_agent.py
tg3/learning/reinforcement/envs_pb/: __init__.py  base_tactile_env.py
tg3/learning/reinforcement/rl_sb3/: rl_plot_utils.py  simple_sb3_example.py
tg3/learning/supervised/image_to_feature/: launch_evaluate.py  launch_hypertrain.py  launch_train.py  setup_train.py
tg3/learning/supervised/image_to_image/: launch_training.py  setup_training.py
tg3/learning/supervised/markers_to_feature/: launch_train.py
tg3/simulator/: setup_pybullet_env.py
tg3/simulator/assets/: default_rest_poses.py
tg3/simulator/embodiments/: __init__.py  create_embodiment.py  embodiments.py
tg3/simulator/robots/arms/: __init__.py  base_robot_arm.py  mapping.py
tg3/simulator/sensors/: tactile_sensor.py
tg3/simulator/utils/: combine_urdfs.py  pybullet_draw_utils.py  setup_pb_utils.py
tg3/tasks/servo/: 111.py  demo1.py  demo2.py  demo_load.py  demo_load2.py  demo_load3.py  demo_palce3.py  demo_place.py  demo_place2.py  demo_push.py  launch_servo.py  pushing.py  replay_servo.py  setup_servo.py  test.py
tg3/tasks/test/: launch_test.py  replay_test.py
tg3/tasks/track/: launch_track.py
(+250 files in other folders)
